--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,74 @@
-h1 {color:royalblue;}
+body {
+    margin: 0;
+    padding: 0;
+    
+}
+
+.gradient {
+    background: linear-gradient(90deg,rgba(45,156,219,.6),rgba(155,81,224,.6));
+}
+.btn {
+    padding: 10px 20px;
+    border-radius: 25px;
+    color:white;
+    text-decoration:none;
+    -webkit-box-shadow:2px 2px 5px 2px rgba(0,0,0,0.3);
+    box-shadow:2px 2px 5px 2px rgba(0,0,0,0.3);
+}
+.container {
+    margin-top: 50px;
+    width: 1000px;
+    /* margin-left: auto;
+    margin-right: auto; */
+    margin:auto ;
+    margin-top: 50px;
+}
+
+.left-bar {
+    width: 200px;
+    float: left;
+}
+.content {
+    width: 800px;
+    float: left;
+    
+}
+.card {
+ width: 20%;
+ float: left;
+ padding: 5%;
+ margin-right: 3%;
+ background: rgb(209, 209, 209);
+ border-radius: 10px;
+}
+
+.clear {
+    clear:both;
+}
+.box {
+    
+    width: 300px;
+    height: 300px;
+    padding: 10px;
+    /* margin: 10px; */
+    margin-right: 10px;
+    /* margin-left: 10px; */
+    /* margin-top: 10px; */
+    /* margin-bottom: 10px; */
+    float: left; 
+}
+.bg-red {
+    background-color: red;
+}
+.bg-green {
+    background-color: green
+}
+.bg-yellow {
+    background-color: yellow;
+}
+
+
+/* h1 {color:royalblue;}
 
 body {font-family:'Courier New', Courier, monospace;}
 
@@ -10,4 +80,4 @@ ul,ol {font-weight: bold;}
 
 .insider {
     list-style: inside;
-}
+} */
